Fixed bug where aside where not positioned fixed on mobile
Very parent must have overflow-x: hidden, otherwise fixed childs behave stragely

--- a/assets/dev/sass/_aside.scss
+++ b/assets/dev/sass/_aside.scss
@@ -31,7 +31,8 @@ main {
 }
 
 body {
-  overflow-x: hidden;
+  // moved to #wrapper
+  // overflow-x: hidden;
   &.visible {
     aside {
       transform: translateX(0);
